the second commit

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
   <div class="video-wrap ">
     <video class="video-wrap__video "  class="video" autoplay muted loop>
-      <source src="video/autumn.mp4" type="video/mp4" class="video" >
+      <source src="video/autumn2.mp4" type="video/mp4" class="video" >
     </video>
     <video class="video-wrap__video "  autoplay muted loop>
-      <source src="video/winter.mp4" type="video/mp4" class="video video-one">
+      <source src="video/winter2.mp4" type="video/mp4" class="video video-one">
     </video>
     <video class="video-wrap__video "  autoplay muted loop>
-      <source src="video/spring.mp4" type="video/mp4" class="video " >
+      <source src="video/spring2.mp4" type="video/mp4" class="video " >
     </video>
     <video class="video-wrap__video "  autoplay muted loop>
-      <source src="video/summer.mp4" type="video/mp4" class="video " >
+      <source src="video/summer3.mp4" type="video/mp4" class="video " >
     </video>
   </div>
 
